# retraq

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  start.sh
.github/workflows/: docker.yml
.planning/: MILESTONE-AUDIT-v1.0.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-import-reliability-schema-evolution/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-05-SUMMARY.md
.planning/phases/02-single-trade-replay-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md
.planning/phases/03-multi-timeframe-compare-lightweight-analytics/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: database.py  import_data.py  main.py  migrate.py  models.py  profile_scope.py  pyproject.toml
backend/services/: binance_trade_aggregate.py  kline_service.py  symbol_utils.py  trade_analyzer.py  trade_importer.py
backend/tests/: test_api_contract.py  test_binance_aggregate.py  test_detect_template.py
docker/: entrypoint.sh
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
samples/: README.md  bit-langge-delivery-example.xlsx
(+49 files in other folders)
