[project]
name = "trading-replay-backend"
version = "0.1.0"
description = "交易复盘 Web 应用后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.35",
    "ccxt>=4.4.26",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
